kubernetes/apps/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`indexer.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls: {}
